# lmp

./: .gitignore
common/: cf_platform.h
common/platform/posix/: posix.d
core/: BaseThread.cpp  BaseThread.hpp  CMakeLists.txt  EchoManager.cpp  EchoManager.hpp  LMPConfiger.hpp  LMPLogger.cpp  LMPLogger.hpp  VideoPlayThread.cpp  VideoPlayThread.hpp  VideoPlayer.cpp  VideoPlayer.hpp  VideoReadThread.cpp  VideoReadThread.hpp  VideoReader.cpp  VideoReader.hpp  main.cpp
core/codec/: codec_common.cpp  codec_common.h
core/codec/x264/: echo_h264_decoder.cpp  echo_h264_encoder.cpp  echo_h264_encoder.h
core/codec/x265/: echo_h265_encoder.cpp  echo_h265_encoder.h
sim_test/sim_relay/: relay.c  relay.d  sim_relay
sim_transport/: sim_external.c  sim_receiver.c  sim_session.c
